fixed line overlapping subtitle

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -332,8 +332,8 @@ body, html {
       padding-top: 30px;
     }
     .banner hr {
-        margin-top: -40px;
-        margin-bottom: 50px;
+        //margin-top: -40px;
+        //margin-bottom: 50px;
     }
     #project_overview {
         display: flex;
@@ -559,8 +559,8 @@ body, html {
       padding-top: 30px;
     }
     .banner hr {
-        margin-top: -40px;
-        margin-bottom: 50px;
+        //margin-top: -40px;
+        //margin-bottom: 50px;
     }
     #project_overview {
         display: flex;
